Рублёвский - импорт packSize для товара